--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,4 +1,9 @@
 <form id="submit">
-	<input id="input" type="number" value="100" />
+	<span>BPM: </span><input id="bpm" type="number" value="100" />
+	<input type="submit" style="display: none" />
+	<span>Beats Per Loop: </span><input id="bpl" type="number" value="16" />
+	<input type="submit" style="display: none" />
+	<span>Beats to Rest Between Loops: </span
+	><input id="bpr" type="number" value="16" />
 </form>
 <script type="text/javascript" src="popup.js"></script>
