--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,7 +6,7 @@
 		/></span>
 		<span>Beats to Rest: <input name="bpr" type="number" value="16"/></span>
 	</div>
-	<div class="column">
+	<div class="column" id="buttons">
 		<button type="button" id="start">Start</button>
 		<button type="button" id="stop">Stop</button>
 		<button type="button" id="next">Next</button>
