--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,4 +1,4 @@
-<form id="submit">
+<form id="form">
 	<div class="column">
 		<span>BPM: <input name="bpm" type="number" value="100"/></span>
 		<span
