--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,8 +1,10 @@
 <form id="form">
 	<div class="column">
-		<span>BPM: <input name="bpm" type="number" value="100"/></span>
-		<span>Beats Per Loop: <input name="bpl" type="number" value="8"/></span>
-		<span>Beats to Rest: <input name="bpr" type="number" value="2"/></span>
+		<span>Original BPM: <input name="bpm" type="number" value="112"/></span>
+		<span
+			>Beats Per Loop: <input name="bpl" type="number" value="47"
+		/></span>
+		<span>Beats to Rest: <input name="bpr" type="number" value="1"/></span>
 	</div>
 	<div class="column" id="buttons">
 		<button type="button" id="start">Start</button>
@@ -11,9 +13,9 @@
 		<button type="button" id="previous">Previous</button>
 	</div>
 	<div class="column">
-		<span>Pitch Change: <input name="pc" type="number" value="0"/></span>
-		<span>Pitch Target: <input name="pt" type="number" value="0"/></span>
-		<span>Pitch Loops: <input name="pl" type="number" value="0"/></span>
+		<span>Pitch Change: <input name="pc" type="number" value="1"/></span>
+		<span>Pitch Target: <input name="pt" type="number" value="100"/></span>
+		<span>Pitch Loops: <input name="pl" type="number" value="100"/></span>
 	</div>
 	<div class="column">
 		<span>Tempo Change: <input name="tc" type="number" value="0"/></span>
