--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,10 +1,8 @@
 <form id="form">
 	<div class="column">
 		<span>Original BPM: <input name="bpm" type="number" value="112"/></span>
-		<span
-			>Beats Per Loop: <input name="bpl" type="number" value="47"
-		/></span>
-		<span>Beats to Rest: <input name="bpr" type="number" value="1"/></span>
+		<span>Beats Per Loop: <input name="bpl" type="number" value="4"/></span>
+		<span>Beats to Rest: <input name="bpr" type="number" value="0"/></span>
 	</div>
 	<div class="column" id="buttons">
 		<button type="button" id="start">Start</button>
@@ -18,9 +16,9 @@
 		<span>Pitch Loops: <input name="pl" type="number" value="100"/></span>
 	</div>
 	<div class="column">
-		<span>Tempo Change: <input name="tc" type="number" value="0"/></span>
-		<span>Tempo Target: <input name="tt" type="number" value="0"/></span>
-		<span>Tempo Loops: <input name="tl" type="number" value="0"/></span>
+		<span>Tempo Change: <input name="tc" type="number" value="1"/></span>
+		<span>Tempo Target: <input name="tt" type="number" value="1.3"/></span>
+		<span>Tempo Loops: <input name="tl" type="number" value="1"/></span>
 	</div>
 	<!-- TODO - metronome -->
 	<!-- TODO - bpm-ometer -->
