--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,6 +20,8 @@
 	<div class="column">
 		<div>Tap To Determine BPM:</div>
 		<button type="button" id="tap">Tap</button>
+		<div>Start Time:</div>
+		<input id="st" name="st" type="number" value="" />
 	</div>
 </form>
 <link rel="stylesheet" type="text/css" href="popup.css" />
