--- a/extension/popup.html
+++ b/extension/popup.html
@@ -15,7 +15,7 @@
 		<div>Start Time:</div>
 		<input id="st" name="st" type="number" value="" />
 		<div>Tap To Determine BPM:</div>
-		<button type="button" id="tap">Tap</button>
+		<div id="tap_parent"><button type="button" id="tap">Tap</button></div>
 	</div>
 	<div class="column" id="buttons">
 		<button type="button" id="start">Start</button>
