--- a/extension/popup.html
+++ b/extension/popup.html
@@ -36,6 +36,10 @@
 		<button type="button" id="next">Next</button>
 		<button type="button" id="previous">Previous</button>
 	</div>
+	<div id="notes_div">
+		<div><span>Notes:</span></div>
+		<textarea id="notes" name="notes"></textarea>
+	</div>
 </form>
 <link rel="stylesheet" type="text/css" href="popup.css" />
 <script type="text/javascript" src="popup.js"></script>
