--- a/extension/popup.html
+++ b/extension/popup.html
@@ -27,8 +27,12 @@
 	<div class="column">
 		<div>Start Time:</div>
 		<input id="st" name="st" type="number" step="0.01" value="" />
-		<div>Tap To Determine BPM:</div>
-		<div id="tap_parent"><button type="button" id="tap">Tap</button></div>
+		<div>End Time:</div>
+		<input id="et" name="et" type="number" step="0.01" value="" />
+		<div id="tap_parent">
+			<span>Tap For <br />BPM:</span
+			><span><button type="button" id="tap">Tap</button></span>
+		</div>
 	</div>
 	<div class="column" id="buttons">
 		<button type="button" id="start">Start</button>
