--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,22 +6,11 @@
 		/></span>
 		<span
 			>Beats Per Loop:
-			<input name="bpl" type="number" step="0.01" value="4"
+			<input id="bpl" name="bpl" type="number" step="0.01" value="4"
 		/></span>
 		<span
 			>Beats to Rest:
 			<input name="bpr" type="number" step="0.01" value="0"
-		/></span>
-	</div>
-	<div class="column">
-		<span
-			>Tempo Change: <input name="tc" type="number" step="0.01" value="1"
-		/></span>
-		<span
-			>Tempo Target: <input name="tt" type="number" step="0.01" value="1"
-		/></span>
-		<span
-			>Tempo Loops: <input name="tl" type="number" step="0.01" value="0"
 		/></span>
 	</div>
 	<div class="column">
@@ -33,6 +22,17 @@
 			<span>Tap For <br />BPM:</span
 			><span><button type="button" id="tap">Tap</button></span>
 		</div>
+	</div>
+	<div class="column">
+		<span
+			>Tempo Change: <input name="tc" type="number" step="0.01" value="1"
+		/></span>
+		<span
+			>Tempo Target: <input name="tt" type="number" step="0.01" value="1"
+		/></span>
+		<span
+			>Tempo Loops: <input name="tl" type="number" step="0.01" value="0"
+		/></span>
 	</div>
 	<div class="column" id="buttons">
 		<button type="button" id="start">Start</button>
