--- a/extension/popup.html
+++ b/extension/popup.html
@@ -41,11 +41,13 @@
   </div>
   <div>
     <div id="profile_parent">
-      Profile:&nbsp;<input id="profile" size="10" />
+      Profile:&nbsp;<input id="profile" name="profile" size="10" />
     </div>
     <button type="button" id="save_profile">Save</button>
     <button type="button" id="delete_profile">Delete</button>
-    <select id="profiles"></select>
+    <div>
+      <select id="profiles"></select>
+    </div>
   </div>
   <div id="notes_div">
     <div><span>Notes:</span></div>
